<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.michibaum</groupId>
    <artifactId>microservice</artifactId>
    <version>1.3.0-spring-and-dependency-updates-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>microservice</name>

    <properties>
        <!-- https://spring.io/projects#release-calendar -->
        
        <!--
        https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies
        https://github.com/spring-projects/spring-boot/wiki
        -->
        <spring-boot.version>3.5.8</spring-boot.version>

        <!--
        https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies
        https://github.com/spring-cloud/spring-cloud-release/wiki/Supported-Versions#supported-releases
        -->
        <spring-cloud.version>2025.0.0</spring-cloud.version>

        <!--
        https://mvnrepository.com/artifact/de.codecentric/spring-boot-admin-server
        https://github.com/codecentric/spring-boot-admin/
        -->
        <spring-boot-admin.version>3.5.6</spring-boot-admin.version>

        <!-- https://mvnrepository.com/artifact/net.ttddyy.observation/datasource-micrometer-spring-boot -->
        <!-- https://github.com/jdbc-observations/datasource-micrometer -->
        <datasource-micrometer-spring-boot.version>1.2.0</datasource-micrometer-spring-boot.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <!--
        https://stackoverflow.com/a/77179226/10258204
        https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib
        -->
        <kotlin.version>2.2.0</kotlin.version>
        <kotlin.compiler.jvmTarget>21</kotlin.compiler.jvmTarget>

        <!--
        https://mockk.io/
        https://mvnrepository.com/artifact/io.mockk/mockk-jvm
        -->
        <mockk.version>1.14.6</mockk.version>

        <!-- Docker Hub -->
        <dockerHub.url>https://registry.hub.docker.com</dockerHub.url>
        <jib-maven-plugin.image>eclipse-temurin:25-jre-alpine</jib-maven-plugin.image>
        
        <!-- Plugins -->
        <!-- https://mvnrepository.com/artifact/com.google.cloud.tools/jib-maven-plugin -->
        <jib-maven-plugin.version>3.5.1</jib-maven-plugin.version>
        <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
        <!-- https://github.com/aleksandr-m/gitflow-maven-plugin -->
        <gitflow-plugin.version>1.21.0</gitflow-plugin.version>
    </properties>

    <dependencies>

        <!-- Kotlin -->
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-dependencies</artifactId>
                <version>${spring-boot-admin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-bom</artifactId>
                <version>${kotlin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>repository.spring.release</id>
            <name>Spring GA Repository</name>
            <url>https://repo.spring.io/release</url>
        </repository>
        <repository>
            <id>repository.spring.milestone</id>
            <name>Spring Milestone Repository</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
    </repositories>

    <modules>
        <module>archunittests</module>
        <module>permission-library</module>
        <module>usermanagement-library</module>
        <module>authentication-library</module>
        <module>spring-boot-starter-authentication</module>
        <module>spring-boot-starter-discord</module>
        <module>gateway-service</module>
        <module>admin-service</module>
        <module>registry-service</module>
        <module>authentication-service</module>
        <module>usermanagement-service</module>
        <module>website-service</module>
        <module>chess-service</module>
        <module>fitness-service</module>
        <module>music-service</module>
        <module>spring-boot-starter-cache</module>
    </modules>

    <profiles>
        <profile>
            <id>sonar-report</id>
            <properties>
                <sonar.organization>michibaum</sonar.organization>
                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
                <sonar.language>kotlin</sonar.language>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <configuration>
                                    <formats>
                                        <format>XML</format>
                                    </formats>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>
                                @{argLine} --illegal-access=permit
                            </argLine>
                            <testSourceDirectory>
                                ${project.basedir}/src/test/kotlin
                            </testSourceDirectory>
                            <includes>
                                <include>**/*UT.java</include>
                                <include>**/*UT.kt</include>
                                <include>**/*UT.class</include>
                            </includes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <argLine>
                                @{argLine} --illegal-access=permit
                            </argLine>
                            <testSourceDirectory>
                                ${project.basedir}/src/test/kotlin
                            </testSourceDirectory>
                            <includes>
                                <include>**/*IT.java</include>
                                <include>**/*IT.kt</include>
                                <include>**/*IT.class</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmTarget>${kotlin.compiler.jvmTarget}</jvmTarget>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                    </args>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                        <plugin>jpa</plugin>
                    </compilerPlugins>
                    <sourceDirs>
                        <source>src/main/kotlin</source>
                    </sourceDirs>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-noarg</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>${gitflow-plugin.version}</version>
                <configuration>
                    <verbose>true</verbose>
                    <installProject>false</installProject>
                    <mvnExecutable>mvnw</mvnExecutable>
                    <pushRemote>true</pushRemote>
                    <gitFlowConfig>
                        <productionBranch>master</productionBranch>
                        <developmentBranch>develop</developmentBranch>

                        <featureBranchPrefix>feature/</featureBranchPrefix>
                        <hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
                    </gitFlowConfig>
                    <argLine>-DprocessAllModules</argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>gitflow-feature-finish</id>
                        <goals>
                            <goal>feature-finish</goal>
                        </goals>
                        <configuration>
                            <keepBranch>false</keepBranch>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
		</plugins>
    </build>

</project>
